log
Thu Apr 21 11:24:16 HSP 2022: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:43: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         if(nodo->pair->key == key) return nodo;
                                           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c9b388d
